# LindeBuzoGrayStippling

./: .gitignore  CMakeLists.txt  README.md
lib/: concorde.h
src/: lbgstippling.cpp  lbgstippling.h  optimizing.cpp  optimizing.h  settingswidget.cpp  settingswidget.h  stippleviewer.cpp  stippleviewer.h  stippleviewer_hsv.cpp  stippleviewer_rgb.cpp  tsp.cpp  tsp.h  voronoidiagram.cpp
